--- a/iOSVouchedWebview/Info.plist
+++ b/iOSVouchedWebview/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need to verify your current location</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow camera access to perform identity verification</string>
 	<key>UIApplicationSceneManifest</key>
